@@ -37,6 +37,7 @@ Bugs fixed
 - Bug 1700 - Ipv6RawSocket does not honor the bound address when sending packets
 - Bug 1701 - Ipv6StaticRouting: the source address should match the destination scope
 - Bug 1703 - Nodes don't react to a DAD
+- Bug 1712 - The IP (v4 and v6) forwarding needs a test
 - Bug 1718 - Ipv4StaticRouting log component is misspelled
 - Bug 1719 - IPv6 default state is set to not forward packets
 - Bug 1720 - IPv6 Fragmentation cause crashes
